# seedsync

./: .dockerignore  .env.example  .gitignore  404.html  ACKNOWLEDGMENTS.md  BULK_ACTIONS_PLAN.md  CLAUDE.MD  CLAUDE.md  Dockerfile  HANDOFF_ARM64_CI.md  MODERNIZATION_ACTION_PLAN.md  MODERNIZATION_REPORT.md  Makefile  PUBLICATION_PLAN.md  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  index.html  sitemap.xml
src/python/: mkdocs.yml  pyproject.toml  seedsync.py
src/python/common/: config.py  job.py
src/python/controller/: __init__.py  auto_queue.py  controller.py  file_operation_manager.py  lftp_manager.py  memory_monitor.py  model_builder.py  scan_manager.py  sonarr_manager.py  webhook_manager.py
src/python/controller/extract/: dispatch.py
src/python/docs/: changelog.md  faq.md  index.md  install.md  usage.md
src/python/lftp/: __init__.py  job_status_parser.py  lftp.py
src/python/model/: file.py  model.py
src/python/ssh/: sshcp.py
src/python/system/: scanner.py
src/python/tests/: conftest.py
src/python/tests/integration/test_controller/: test_controller.py
src/python/tests/unittests/test_common/: test_config.py  test_constants.py
src/python/tests/unittests/test_controller/: test_auto_delete.py  test_auto_queue.py  test_controller_job.py  test_controller_unit.py  test_file_operation_manager.py  test_lftp_manager.py  test_memory_monitor.py  test_model_builder.py  test_scan_manager.py  test_sonarr_manager.py  test_webhook_manager.py
src/python/tests/unittests/test_ssh/: test_sshcp.py
src/python/web/: web_app.py  web_app_builder.py  web_app_job.py
src/python/web/handler/: config.py  controller.py  stream_log.py  stream_model.py  webhook.py
src/python/web/serialize/: serialize_model.py
(+427 files in other folders)
