[tool]
[tool.poetry]
name = "seedsync"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"
bottle = "*"
mkdocs = "*"
mkdocs-material = "*"
parameterized = "*"
paste = "*"
patool = "*"
pexpect = "*"
pytz = "*"
requests = "*"
tblib = "*"
timeout-decorator = "*"

[tool.poetry.group.dev.dependencies]
pyinstaller = "*"
testfixtures = "*"
webtest = "*"
pytest = "^6.2.1"
