[tool]
[tool.poetry]
name = "seedsync"
version = "0.0.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
bottle = "*"
mkdocs = "*"
mkdocs-material = "*"
parameterized = "*"
paste = "*"
patool = "*"
pexpect = "*"
pytz = "*"
requests = "*"
tblib = "*"
timeout-decorator = "*"

[tool.poetry.group.dev.dependencies]
pyinstaller = "*"
testfixtures = "*"
webtest = "*"
pytest = "^7.0.0"

[tool.pytest.ini_options]
pythonpath = ["."]
