[tool]
[tool.poetry]
name = "seedsync"
version = "1.0.0"
description = "Fast file syncing from remote servers with a web UI, powered by LFTP"
authors = ["thejuran"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
bottle = "^0.13.4"
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.1"
parameterized = "^0.9.0"
paste = "^3.10.1"
patool = "^4.0.3"
pexpect = "^4.9.0"
pytz = "^2025.2"
requests = "^2.32.5"
tblib = "^3.2.2"
timeout-decorator = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.0.0"
testfixtures = "^10.0.0"
webtest = "^3.0.7"
pytest = "^7.4.4"
pytest-timeout = "^2.3.1"

[tool.pytest.ini_options]
pythonpath = ["."]
timeout = 60
